<resources>
    <string name="app_name">OPENCON</string>
    <string name="schedule">Расписание</string>
    <string name="members">Участники</string>
    <string name="jury">Жюри и Организаторы</string>
    <string name="news">Новости</string>
    <string name="scheme">Схема здания</string>
    <string name="regulations">Регламент</string>
    <string name="about">О фестивале</string>
    <string name="media">Фото</string>
    <string name="fanart">Фан-арт</string>
    <string name="photocosplay">Фотокосплей</string>
    <string name="no_tweets">Не найдено твитов</string>
    <string name="about_title">OPENCON 2015</string>
    <string name="about_text">Приглашаем посетить 4-й Межрегиональный фестиваль азиатской культуры и фантастики OPENCON 2015. Тема в этом году спорт! А значит нас ждут настоящие косплейные соревнования! В этом году новые секции — тематическое спортивное дефиле и King Size для больших делегаций. К призовому фонду в этом году мы добавляем Гран-при — оверлок, обладателем которого может стать любой участник дефиле фестиваля OPENCON. Зрителей ждут конкурсы и подарки! Ждем всех в Казани 5 декабря!</string>
    <string name="about_when_and_where">5 декабря 2015\n
Начало продажи билетов и прохода на фестиваль: 11:00\n
Открытие фестиваля: 12:00\n
Окончание фестиваля: 20:00\n\n
г.Казань, ДК имени Ленина\n
ул. Копылова, 2а.
</string>
    <string name="about_how_to_get_there"><b>Метро:</b> «Авиастроительная»\n
Остановка для общественного транспорта — «Метро Авиастроительная» или «КДК им. Ленина».\n
Иногда проще сказать «Соцгород»\n
<b>Автобусы:</b>\n
6, 18, 33, 37, 40, 42, 43, 53, 60, 76, 78, 89, 92, 93\n
<b>Троллейбусы:</b>\n
13\n
<b>Трамваи:</b>\n
1, 6\n
\n
<b>От ЖД Вокзала «Казань-1» (Казань-Пассажирская, Главный):</b>\n
<b>Трамвай:</b>\n
1\n
<b>Автобус:</b>\n
37, 6\n
<b>Метро:</b> «Кремлевская» пешком 10 минут или до метро «Площадь Тукая» на автобусах 10, 30 и 63\n
\n
<b>От ЖД Вокзала «Казань-2» (Северный):</b>\n
<b>Трамваи:</b>\n
1, 6\n
<b>Автобусы:</b>\n
6, 18, 37, 40, 76, 78, 89\n
<b>Метро:</b> «Северный вокзал»\n
\n
<b>От Аэропорта «Казань»:</b>\n
Сначала на 197 до остановки «Метро Проспект Победы», потом непосредственно на метро до конечной «Авиастроительная».
</string>
    <string name="where_and_when">Где и когда</string>
    <string name="how_to_get_there">Как доехать?</string>
    <string name="open_map">Открыть карту</string>
    <string name="vk">Профиль в соц.сети</string>
    <string name="city">Город</string>
    <string name="sex">Пол</string>
</resources>