<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/jury"
            android:icon="@drawable/jury"
            android:title="@string/jury" />
        <item
            android:id="@+id/news"
            android:icon="@drawable/news"
            android:title="@string/news" />
        <item
            android:id="@+id/scheme"
            android:icon="@drawable/scheme"
            android:title="@string/scheme" />
        <item
            android:id="@+id/rules"
            android:icon="@drawable/rules"
            android:title="@string/rules" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about" />
    </group>

</menu>